--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
 
 .main-header {
   min-height: 700px;
+  padding-top: 25px;
 
   background: url("../img/header-bg.jpg") no-repeat center/cover;
 }
@@ -139,6 +140,54 @@ body {
 
 .main-menu {
   width: 270px;
+
+  background: #c55152;
+}
+
+.main-menu h2 {
+  margin: 0;
+  padding: 0;
+  height: 20px;
+  padding-top: 30px;
+  padding-bottom: 25px;
+  padding-left: 40px;
+
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  background-color: #333333;
+  color: #ffffff;
+}
+
+.main-menu ul {
+  padding: 0;
+  margin: 0;
+}
+
+.main-menu li {
+  list-style: none;
+}
+
+.main-menu a {
+  display: block;
+  padding: 7px 0;
+  padding-left: 40px;
+
+  line-height: 36px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: inherit;
+  font-size: 14px;
+  font-weight: 900;
+
+  color: #000000;
+}
+
+.main-menu a:hover {
+  background-color: #333333;
+  color: #ffffff;
 }
 
 .banner {
@@ -149,6 +198,21 @@ body {
   width: 870px;
 
   font-family: 'Roboto', 'Arial', sans-serif;
+}
+
+.gallery h2 {
+  margin: 0;
+  padding: 0;
+  padding-left: 25px;
+  padding-top: 30px;
+  padding-bottom: 40px;
+
+  font-size: 22px;
+  font-weight: 900;
+  font-style: italic;
+  text-transform: uppercase;
+
+  color: #707070;
 }
 
 .gallery-item {
