Колонки футера будут на флоатах

--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,7 @@ body {
   margin-right: 0;
 }
 
-.footer-columns {
-  display: inline-block;
+.footer-column {
+  float: left;
+  max-width: 270px;
 }
