--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,8 @@ body {
   display: inline-block;
   width: 390px;
   height: 150px;
+
+  text-align: center;
 }
 
 .big-btn-fb {
@@ -404,6 +406,14 @@ body {
 
 .big-btn-pint {
   background-color: #cb2027;
+}
+
+.big-btn .icon {
+  font-size: 60px;
+  line-height: 150px;
+  vertical-align: middle;
+
+  color: #fff;
 }
 
 .footer-middle {
@@ -562,19 +572,21 @@ body {
 
 .footer-social a {
   display: inline-block;
+  height: 20px;
 
   vertical-align: top;
   text-align: center;
+  line-height: 20px;
 }
 
 .footer-social .icon {
   display: inline-block;
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 
   font-size: 15px;
-  line-height: 25px;
+  line-height: 20px;
   vertical-align: middle;
 
   color: #fff;
@@ -584,4 +596,3 @@ body {
   background-color: #fff;
   color: #333;
 }
-
