--- a/css/style.css
+++ b/css/style.css
@@ -222,18 +222,18 @@ body {
   width: 270px;
 }
 
-.gallery {
+.catalog {
   width: 870px;
 
   font-family: 'Roboto', 'Arial', sans-serif;
   font-size: 0;
 }
 
-.gallery-section {
+.catalog-section {
   margin-bottom: 50px;
 }
 
-.gallery h2 {
+.catalog h2 {
   margin: 0;
   padding: 0;
   padding-left: 25px;
@@ -248,7 +248,7 @@ body {
   color: #707070;
 }
 
-.gallery-item {
+.catalog-item {
   display: inline-block;
   width: 270px;
   margin-right: 30px;
@@ -256,15 +256,15 @@ body {
   vertical-align: top;
 }
 
-.gallery-item:nth-of-type(3n) {
+.catalog-item:nth-of-type(3n) {
   margin-right: 0;
 }
 
-.gallery-item:hover {
+.catalog-item:hover {
   box-shadow: 0 0 20px #333;
 }
 
-.gallery-item a {
+.catalog-item a {
   display: block;
   padding: 10px;
 
@@ -277,12 +277,12 @@ body {
   color: #333333;
 }
 
-.gallery-item img {
+.catalog-item img {
   display: block;
   margin-bottom: 20px;
 }
 
-.gallery-item h1 {
+.catalog-item h1 {
   float: left;
   margin: 0;
   padding: 0;
