--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,16 @@ body {
   font-size: 0;
 }
 
+.catalog {
+  margin-bottom: 50px;
+}
+
 .catalog-section {
   margin-bottom: 50px;
+}
+
+.catalog-section:last-of-type {
+  margin-bottom: 0;
 }
 
 .catalog h2 {
