--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?43715284');
-  src: url('../font/fontello.eot?43715284#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?43715284') format('woff2'),
-       url('../font/fontello.woff?43715284') format('woff'),
-       url('../font/fontello.ttf?43715284') format('truetype'),
-       url('../font/fontello.svg?43715284#fontello') format('svg');
+  src: url('../font/fontello.eot?34556430');
+  src: url('../font/fontello.eot?34556430#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?34556430') format('woff2'),
+       url('../font/fontello.woff?34556430') format('woff'),
+       url('../font/fontello.ttf?34556430') format('truetype'),
+       url('../font/fontello.svg?34556430#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?43715284#fontello') format('svg');
+    src: url('../font/fontello.svg?34556430#fontello') format('svg');
   }
 }
 */
@@ -55,6 +55,9 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
+.icon-mail:before { content: '\e800'; } /* '' */
+.icon-phone:before { content: '\e801'; } /* '' */
+.icon-location:before { content: '\e802'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-rss:before { content: '\f09e'; } /* '' */
